@startuml
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor LightBlue
  BorderColor Blue
}
hide circle
hide methods

' --------- Classes e atributos necessários ---------
class Player {
  username
  password
  ownedLocomotives
}

class Scenario {
  nameID
  startDate
  endDate
  initialBudget
  currentBudget
}

class Station {
  nameID
  storageCapacity
  buildingSlots
  availableCargo
  requestedCargo
}

class Building {
  nameID
  type
  availabilityYear
  evolutionCost
  evolutionStagesLeft
  effect
}

' --------- Relações usadas na US06 ---------
Player  "1" -- "*" Scenario : plays
Player   "1" -- "*" Station   : builds
Scenario  "1" -- "*" Station  : configures >
Station   "1" -- "*" Building : upgraded with >
Building  "1" -- "0..1" Building : evolves into >
@enduml